Completed new version of guidebook